# vulkan-deferred-shading

./: .clang-format  CMakeLists.txt  README.md  main.cpp
cmake/modules/: FindGLFW.cmake
shader/: 09_shader_base.frag
shaders/: 09_shader_base.vert
shaders/blinn-phong/: blinn-phong.frag  blinn-phong.vert
shaders/gouraud/: gouraud_shading.vert
src/: main.cpp
src/app/: App.cpp  App.hpp  app.cpp  app.hpp
src/common/: config.hpp
src/renderer/: Camera.cpp  Camera.hpp  Cemera.cpp  Cemera.hpp  Uniform.hpp  Vertex.hpp  renderer.cpp  renderer.hpp
src/system/: ModelSystem.cpp  ModelSystem.hpp
src/vulkan/: Swapchain.cpp  Swapchain.hpp  Validation.cpp  Validation.hpp  VulkanContext.cpp  VulkanContext.hpp  graphics_pipeline.cpp  graphics_pipeline.hpp  render_pass.cpp  render_pass.hpp  swap_chain.cpp  swap_chain.hpp
